app ftp resourcetype

--- a/src/main/resources/extend.properties
+++ b/src/main/resources/extend.properties
@@ -1,12 +1,15 @@
+#source.type=ftp
+source.type=app
+app.basepath=resource
 #============================================================================
 #FTP测试环境配置
 #============================================================================
-ftp.hostname=localhost
-ftp.hostport=21
-ftp.username=hejg
-ftp.password=hjg12345
-ftp.basepath=aibase
-ftp.encoding=GBK
+#ftp.hostname=localhost
+#ftp.hostport=21
+#ftp.username=hejg
+#ftp.password=hjg12345
+#ftp.basepath=aibase
+#ftp.encoding=GBK
 #============================================================================
 #FTP正式环境配置
 #============================================================================
