--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
 			<artifactId>pagehelper</artifactId>
 			<version>5.0.2-beta</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>6.0.6</version>
+		</dependency>
 
 		<!-- barcode:zxing/core/javase -->
 		<dependency>
