data-grid-define

--- a/src/main/resources/extend.properties
+++ b/src/main/resources/extend.properties
@@ -1,6 +1,6 @@
 #source.type=ftp
 source.type=app
-app.basepath=resource
+app.basepath=/resource
 #============================================================================
 #FTP测试环境配置
 #============================================================================
