--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,10 +5,10 @@ jdbc.esop.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.esop.url=jdbc:db2://localhost:50000/SCGRP01
 jdbc.esop.username=hejg
 jdbc.esop.password=hjg12345
-jdbc.esopHis.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.esopHis.url=jdbc:db2://localhost:50000/GRPMK
-jdbc.esopHis.username=hejg
-jdbc.esopHis.password=hjg12345
+jdbc.esopHis.driver=com.mysql.cj.jdbc.Driver
+jdbc.esopHis.url=jdbc:mysql://pudisdo.gicp.net:3306/bid?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=GMT%2b8
+jdbc.esopHis.username=bid
+jdbc.esopHis.password=bid
 #============================================================================
 # 正式环境配置
 #============================================================================
